# ibis-mssqlops

./: .gitignore  README.md  pyproject.toml
ibis_mssqlops/: __init__.py  addibis.py  addsql.py  connect.py  consts.py  datatypes.py  expr.py  funcs.py  transforms.py
