[tool.poetry]
name = "ibis-mssqlops"
version = "0.0.51"
license = "MIT"
description = "Ibis-mssqlops é uma extensão ao backend MSSQL do ibis-framework"
authors = ["Marcus Holanda <mvsh777@hotmail.com>"]
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "Natural Language :: Portuguese (Brazilian)",
    "Programming Language :: PL/SQL",
    "Programming Language :: Python :: 3.11"
]


[tool.poetry.urls]
"Codigo" = "https://github.com/Marcus-Holanda777/ibis-mssqlops"


[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.24"
ibis-framework = {extras = ["mssql"], version = "^7.2.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
